# sigil

./: .gitattributes  Cargo.toml  README.md  justfile
.github/workflows/: rust.yml
examples/: interop.rs  repl.rs
src/: analyzer.rs  collections.rs  core.sigil  interpreter.rs  lib.rs  namespace.rs  prelude.rs  reader.rs  repl.rs  testing.rs  value.rs  writer.rs
src/analyzer/: analyzed_form.rs  analyzer.rs  mod.rs
src/lang/: core.rs  core.sigil  mod.rs  prelude.rs
src/namespace/: mod.rs  var.rs
src/reader/: form.rs  mod.rs
src/value/: atom.rs  mod.rs  var.rs
tests/: integration.rs  self-hosted.sigil  tests.sigil
