[package]
name = "sigil"
version = "0.1.0"
authors = ["Alex Stokes <r.alex.stokes@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
itertools = "0.10"
rpds = "0.11"

rustyline = { version =  "9.1", optional = true }
rustyline-derive = { version = "0.6", optional = true }
clap = { version =  "3.0.0-rc.9", features = ["derive"], optional = true }

[dev-dependencies]
ssz_rs = { git = "https://github.com/ralexstokes/ssz_rs", branch = "main" }

[features]
repl = ["rustyline", "rustyline-derive", "clap"]

[[bin]]
name = "repl"
required-features = ["repl"]
